[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/slots/Slot.gd" type="Script" id=1]

[sub_resource type="DynamicFont" id=1]
size = 30

[node name="Slot" type="CenterContainer" groups=["slot"]]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
script = ExtResource( 1 )

[node name="Unit" type="Sprite" parent="."]
visible = false
modulate = Color( 0.968627, 1, 0, 1 )
scale = Vector2( 0.4, 0.4 )
centered = false

[node name="Qtd" type="Label" parent="."]
visible = false
margin_left = 15.0
margin_top = 15.0
margin_right = 16.0
margin_bottom = 16.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.658824 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="TableImage" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawerImage" type="TextureRect" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="BossTableImage" type="TextureRect" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="Preview" type="TextureRect" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
expand = true
stretch_mode = 6

[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
